# hack-ai-09-2023

./: .gitignore  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  env-template  nginx.jetfork.conf
.github/workflows/: test.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  factory.py
backend/app/api/: __init__.py  matching.py
backend/app/core/: config.py
backend/app/models/: __init__.py  receipts.py  user.py
backend/app/schemas/: receipts.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/CartInfo/: CartInfo.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/pages/: CartChecking.tsx  Products.tsx
frontend/src/providers/: env.ts
